<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="15dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="15dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:minWidth="10dp"
            android:text="@string/titulo"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="30sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />


</LinearLayout>