<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"

    android:orientation="vertical"
    tools:context=".ExibeContatosActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextStreet"
            android:layout_alignStart="@+id/editTextStreet"
            android:layout_marginTop="22dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="82dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck">


        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentStart="true"
            android:labelFor="@id/editTextName"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextCity"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:onClick="run"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView1"
            android:layout_alignBottom="@+id/editTextEmail"
            android:labelFor="@id/editTextEmail"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView1"
            android:layout_alignBottom="@+id/editTextPhone"
            android:labelFor="@id/editTextPhone"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_alignStart="@+id/textView5"
            android:labelFor="@id/editTextStreet"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextName"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextCity"
            android:layout_alignBottom="@+id/editTextCity"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/editTextEmail"
            android:labelFor="@id/editTextCity"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignStart="@+id/editTextName"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck">

        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignStart="@+id/editTextStreet"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone|text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </RelativeLayout>

</ScrollView>